@@ -1,3 +1,12 @@
+2017-09-10  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/pages/show_all_results.js:
+	Create this file.
+	Define showAllResults function. This is not finished.
+
+	* tryXpath/pages/show_all_results.html:
+	Create this file.
+
 2017-09-09  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_functions.js: 
